# capnzero

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md
.devcontainer/: Dockerfile  build_docker_image.sh  common.sh  devcontainer.json  run_docker_image.sh
cmake/: CPM.cmake  capnzero-config.cmake  capnzero-config.cmake.in  capnzero_generate_cpp.cmake
debian/: 3rd-capnzero-dev.install  changelog  control  rules
include/: capnzero_NativeCapnpMsgWriter.h  capnzero_typedefs.h  capnzero_utils.h  error_msg.hpp  span.h
scripts/: capnp_file.py  capnzeroc.py  client_cpp.py  client_h.py  client_inl.py  client_transport_h.py  client_transport_inl.py  common.py  common_client.py  global_types.py  qobject_client_cpp.py  qobject_client_cpp_org.py  qobject_client_h.py  rpc_interface_headers.py  server_cpp.py  server_h.py  toml2Json.py
tests/: CMakeLists.txt
tests/Calculator/: CMakeLists.txt  Client.cpp  Server.cpp
tests/Calculator/schema/: CMakeLists.txt  Calculator.toml
tests/CalculatorQt/: Client.cpp  Server.cpp
tests/CalculatorQt/WebSocketClientWrapper/: CMakeLists.txt  WebSocketClientWrapper.cpp
tests/CalculatorQt/schema/: CMakeLists.txt  CalculatorQt.toml
tests/CalculatorQtWebchannel/: CMakeLists.txt  Client.cpp  Server.cpp
tests/CalculatorQtWebchannel/Web/: index.html  qwebchannel.js  test.css  test.js
tests/CalculatorQtWebchannel/WebSocketClientWrapper/: CMakeLists.txt  WebSocketClientWrapper.h  WebSocketTransport.cpp  WebSocketTransport.h
tests/CalculatorQtWebchannel/schema/: CMakeLists.txt  CalculatorQtWebchannel.toml
tests/RPCOnly/: CMakeLists.txt  Client.cpp  Server.cpp
tests/RPCOnly/schema/: CMakeLists.txt  CalculatorRpcOnly.toml
tests/SignalsOnly/: Client.cpp  Server.cpp
tests/SignalsOnly/schema/: CMakeLists.txt  CalculatorSignalsOnly.toml
tests/TemperatureQt/: CMakeLists.txt  Client.cpp  Server.cpp  main.qml  qml.qrc
tests/TemperatureQt/schema/: CMakeLists.txt  TemperatureQt.toml
tests/TemperatureQt/utils/: FdSet.cpp
tests/TemperatureQtSignalsOnly/: Client.cpp  Server.cpp  ValueBar.qml  main.qml
tests/TemperatureQtSignalsOnly/schema/: CMakeLists.txt  TemperatureQtSignalsOnly.toml
tests/TemperatureQtSignalsOnly/utils/: FdSet.h
tests/TemperatureQtWithServiceName/: Client.cpp  Server.cpp  main.qml
tests/TemperatureQtWithServiceName/schema/: CMakeLists.txt  TemperatureQtWithServiceName.toml
tests/TemperatureQtWithServiceName/utils/: CMakeLists.txt  error_msg.hpp
